Fixed width on mobile

--- a/src/scss/title.scss
+++ b/src/scss/title.scss
@@ -12,7 +12,7 @@ h6 {
     text-transform: uppercase;
     color: var(--color-midground-less);
     font-weight: bold;
-    font-size: 10vw;
+    font-size: 6rem;
     line-height: 0.8;
     margin: 0;
 }
